Dockerfile: use intermediate stage to build smaller java 12 custom jre